Geometry nodes: Object Info does not return negative Scale values #104926

Closed
opened 2023-02-18 18:49:55 +01:00 by Vyacheslav Kobozev · 4 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: 3.1.0, caused by cf83719761
Worked: 3.0.0

Short description of error
When I instance from collection, objects with negative scale passes only positive scale to instances.
Check file and video.

Object Info - Scaling Bug [Example].png

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: 3.1.0, caused by cf83719761208cc432da08930ed478bf35f29f6c Worked: 3.0.0 **Short description of error** When I instance from collection, objects with negative scale passes only positive scale to instances. Check file and video. ![Object Info - Scaling Bug [Example].png](/attachments/31695f47-c45e-4fb7-a548-32a8954803a8) <video src="/attachments/37e898e7-4412-4f51-9e45-661d7f9ecfa6" controls></video>
Vyacheslav Kobozev added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-18 18:49:55 +01:00

I see that this is a consequence of getting the transformation through the matrix. Rotation occurs, not resizing. But it seems that the transformation still does not reflect the real transformation.

I see that this is a consequence of getting the transformation through the matrix. Rotation occurs, not resizing. But it seems that the transformation still does not reflect the real transformation.

Also, not only Collection produce the issue. Even instances, flipped directly inside GN-tree shows wrong calues with Instance Scale node

Also, not only Collection produce the issue. Even instances, flipped directly inside GN-tree shows wrong calues with Instance Scale node

This is a potential bug, but I don't see the reason in math and it always has been. So I hope some of the developers will be more confident in this.

This is a potential bug, but I don't see the reason in math and it always has been. So I hope some of the developers will be more confident in this.
Iliya Katushenock added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-12-28 19:51:58 +01:00
Germano Cavalcante changed title from Geometry nodes. Objects with negative scale have positive scale as instances to Geometry nodes: Object Info does not return negative Scale values 2023-12-29 23:59:11 +01:00

Caused by cf83719761
@HooglyBoogly, could you check?

Caused by cf83719761 @HooglyBoogly, could you check?
Iliya Katushenock added this to the 3.6 LTS milestone 2023-12-30 00:12:42 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-10 17:36:06 +01:00
Iliya Katushenock modified the milestone from 3.6 LTS to 3.3 LTS 2024-01-10 18:15:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104926
No description provided.